javali_tests/A3/A4_keinestamSchmid/fail/IncorrectArithmeticOperations.javali
// Rule 2.3.5: Tests that arithmetic operations cannot be
// applied to invalid argument types.
class Main {
	void main() {
		int ri, i1;
		i1 = 1;
		ri = true * i1;
	}
}